<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity"
    android:background="@drawable/hogwarts"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/quiz_title" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_question"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:padding="20dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/harrys_owl"
            android:inputType="text"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="first_question"
            android:text="@string/confirmation"
            android:textColor="@color/colorPrimary"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/second_question"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/george"
            android:id="@+id/George"
            android:onClick="second_question"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/luna"
            android:id="@+id/Luna"
            android:onClick="second_question"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/william"
            android:id="@+id/William"
            android:onClick="second_question"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percy"
            android:id="@+id/Percy"
            android:onClick="second_question"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thrid_question"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="20dp"
            android:textColor="@android:color/black"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edward_lupin"
                android:id="@+id/edward"
                android:onClick="third_question"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neville_lupin"
                android:id="@+id/neville"
                android:onClick="third_question"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourth_question"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="20dp"
            android:textColor="@android:color/black"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doe"
                android:id="@+id/doe_patronus"
                android:onClick="fourth_question"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stag"
                android:id="@+id/stag_patronus"
                android:onClick="fourth_question"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/snake"
                android:id="@+id/snake_patronus"
                android:onClick="fourth_question"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifth_question"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="20dp"
            android:textColor="@android:color/black"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat"
                android:id="@+id/crookshanks_cat"
                android:onClick="fifth_question"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rat"
                android:id="@+id/crookshanks_rat"
                android:onClick="fifth_question"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owl"
                android:id="@+id/crookshanks_owl"
                android:onClick="fifth_question"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sixth_question"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="20dp"
            android:textColor="@android:color/black"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snitch"
            android:id="@+id/snitch"
            android:onClick="sixth_question"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quaffle"
            android:id="@+id/quaffle"
            android:onClick="sixth_question"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bludgers"
            android:id="@+id/bludgers"
            android:onClick="sixth_question"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thestral"
            android:id="@+id/thestral"
            android:onClick="sixth_question"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seventh_question"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="20dp"
            android:textColor="@android:color/black"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/True"
                android:id="@+id/albus_true"
                android:onClick="seventh_question"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/False"
                android:id="@+id/albus_false"
                android:onClick="seventh_question"/>
        </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="30dp"
            android:onClick="submit_btn"/>
    </LinearLayout>
</ScrollView>
